grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: grafana.shukawam.com
    http:
      paths:
      - backend:
          service:
            name: prometheus-grafana  
            port:
              number: 80
        path: /
        pathType: Prefix
